--- a/themes/fluid/layout/_partial/head.ejs
+++ b/themes/fluid/layout/_partial/head.ejs
@@ -13,7 +13,7 @@ if (page.title) {
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="referrer" content="noreferrer">
+  <meta name="referrer" content="no-referrer">
   <% if (theme.force_https) { %>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <% } %>
